[project]
name = "ethic-project"
version = "0.1.0"
description = "Algorithmic fairness, interpretability and robustness on German Credit dataset"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "shap>=0.44",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "nbconvert>=7.0",
    "jedi>=0.18,<0.19",
]
